fixed squished projects

--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 body {
   font-size: 25px;
   font-weight: bold;
+  font-family: 'Nunito Sans', sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+  color:white;
+  background-color: black;
 }
 
 .nav {
@@ -8,8 +13,18 @@ body {
   border: 2px black solid;
   border-left: 0;
   border-right: 0;
-  background-color: lightgray;
+  background-color: black;
   height: 75px;
+}
+
+.nav ul{
+  list-style: none;
+  display:flex;
+  flex-direction: row;
+}
+
+.nav li{
+  margin-left:25px;
 }
 
 .homepage {
@@ -18,8 +33,9 @@ body {
   width: 100%;
   height: 1000px;
   border: 2px solid black;
-  background-color: grey;
-  color: white;
+  color: black;
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 .about-me {
@@ -54,4 +70,43 @@ body {
   border: black solid 2px;
   background-color: lightgray;
   height: 150px;
+}
+
+.homepage{
+  position:relative;
+  text-align:center;
+  color:black;
+  height: 721px;
+  font-family: 'Roboto', sans-serif;
+  
+}
+
+.homepage h1{
+  font-weight: 200;
+  letter-spacing: 7px;
+  color:white;
+  font-size: 50px
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color:black;
+}
+
+@media only screen and (max-width: 1100px) {
+  .portfolio {
+  display:flex;
+  flex-direction:column;
+  align-items: center;
+  }
+
+  .project{
+  width: 300px;
+  height: 400px;
+  padding: 10px;
+  margin-bottom: 10px;
+  }
 }
